# ResearchTemplate

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/runs/: example.yaml
docs/implementation/: current_system_state.md
docs/implementation/handoff/: agent_backlog.md  agent_handoff_prompt.md
docs/planning/: future_optional.md  future_required.md
docs/testing/: active_manual_checks.md  agent_checks.md
tests/: test_placeholder.py
